--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -2,7 +2,7 @@
 .container {
     display: flex;
     justify-content: center;
-    margin: 50px;
+    margin: 20px;
     box-shadow: #E69432;
 }
 
@@ -11,5 +11,5 @@ h1 {
     font-weight: 800;
     text-transform: uppercase;
     font-size: 40px;
-    color: #E69432;
+    color: #231304;
 }
