--- a/src/app/reset/reset.component.html
+++ b/src/app/reset/reset.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <button class="reset">
-        <span>reset</span>
+<div class="reset-btn__container">
+    <button class="reset-btn" (click)="onResetButtonClick()">
+        <span class="reset-btn__text">reset</span>
     </button>
 </div>
