--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,6 +1,12 @@
-<div class="container">
-    <h1>The floating connect 4</h1>
+<div class="game__container">
+    <h1 class="game__title">The floating connect 4</h1>
 </div>
-
+<div class="game__container">
+    <button class="game__toggle" (click)="toggleNightMode()">
+        <h2 class="game__icon" (click)="toggleDayNightIcon()">
+            {{ isSunIcon ? '☾' : '☼' }}
+        </h2>
+    </button>
+</div>
 <app-board></app-board>
-<app-reset></app-reset>
+<app-reset (resetClicked)="onResetGame()"></app-reset>
