--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -1,15 +1,31 @@
-
-.container {
+.game__container {
     display: flex;
     justify-content: center;
+    align-items: center;
     margin: 20px;
-    box-shadow: #E69432;
 }
 
-h1 {
+.game__title {
     font-family: 'Arial', bold;
     font-weight: 800;
     text-transform: uppercase;
     font-size: 40px;
     color: #231304;
+    transition: background-color 1s ease;
+}
+
+.game__icon {
+    color: white;
+    font-size: 25px;
+}
+
+.game__toggle {
+    background-color: black;
+    padding: 5px;
+    width: 50px;
+    height: 40px;
+    border: none;
+    border-radius: 100px;
+    cursor: pointer;
+    transition: background-color 0.5s ease;
 }
