--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,5 +1,7 @@
+<!-- Plateau du jeu -->
+
  <div class="board-container">
-  <span class="board-container__countdown">Temps restant pour le joueur actuel : {{ countdownTime }}s</span>
+  <span class="board-container__countdown">Remaining time for the current player : {{ countdownTime }}s</span>
 </div>
 <div class="board-container"></div>
 <div class="board-container">
