--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -1,3 +1,5 @@
+// Style du plateau, du compteur de mouvements, des cellules
+
 .board-container {
     display: flex;
     flex-direction: row;
@@ -71,6 +73,28 @@
         }
     }
 }
+
+// Animations
+
+@keyframes float {
+    0%, 100% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-8px);
+    }
+}
+
+@keyframes shadowEffect {
+    0%, 100% {
+        box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.3), 0 50px 20px rgba(0,0,0,0.22);
+    }
+    50% {
+        box-shadow: 0px 90px 70px rgba(0, 0, 0, 0.3), 0 40px 15px rgba(0,0,0,0.18);
+    }
+}
+
+// Responsive
 
 @media screen and (max-width:600px) {
 	.board {
