--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,3 +1,5 @@
+<!-- Titre + service dark/light mode + plateau + directive Reset -->
+
 <div class="game__container">
     <h1 class="game__title">The floating connect 4</h1>
 </div>
