--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -1,3 +1,5 @@
+// Styles des conteneurs, du titre, des icônes (sun/moon), du bouton
+
 .game__container {
     display: flex;
     justify-content: center;
