--- a/src/app/reset/reset.component.html
+++ b/src/app/reset/reset.component.html
@@ -1,3 +1,5 @@
+<!-- Composant Reset -->
+
 <div class="reset-btn__container">
     <button class="reset-btn" (click)="onResetButtonClick()">
         <span class="reset-btn__text">reset</span>
